--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
             <!-- feature section -->
-            <section class="section-feature section">
+            <!-- <section class="section-feature section">
                 <div class="container">
                     <h2 class="section-feature-title visually-hidden">Lorem ipsum dolor sit.</h2>
                     <ul class="feature-list list">
@@ -125,7 +125,7 @@
             </section>
 
             <!-- about section -->
-             <section class="section-about section">
+             <!-- <section class="section-about section">
                 <div class="container">
                     <h2 class="section-about-title">What are we doing</h2>
 
@@ -142,10 +142,10 @@
                     </ul>
                 </div>
 
-            </section> 
+            </section>  -->
 
             <!-- team section -->
-             <section class="section-team section">
+             <!-- <section class="section-team section">
                 <div class="container">
                     <h2 class="section-team-title">Our Team</h2>
 
@@ -328,7 +328,7 @@
 
              <!-- customers section -->
              <section class="customers section">
-                <div class="container">
+                 <div class="container">
                     <h2 class="customers-title">Customers</h2>
 
                     <ul class="customers-list">
@@ -375,10 +375,9 @@
                             </a>
                         </li>
                     </ul>
-                </div>
+                </div> 
                 
             </section>
-        </main>
 
         <!-- footer section -->
          <footer class="footer">
