--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
             <!-- feature section -->
-            <!-- <section class="section-feature section">
+            <section class="section-feature section">
                 <div class="container">
                     <h2 class="section-feature-title visually-hidden">Lorem ipsum dolor sit.</h2>
                     <ul class="feature-list list">
@@ -125,7 +125,7 @@
             </section>
 
             <!-- about section -->
-             <!-- <section class="section-about section">
+             <section class="section-about section">
                 <div class="container">
                     <h2 class="section-about-title">What are we doing</h2>
 
@@ -142,10 +142,10 @@
                     </ul>
                 </div>
 
-            </section>  -->
+            </section>  
 
             <!-- team section -->
-             <!-- <section class="section-team section">
+             <section class="section-team section">
                 <div class="container">
                     <h2 class="section-team-title">Our Team</h2>
 
