--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>  
     
       <!-- header section -->
-        <!-- <header class="header">
+         <header class="header">
             <div class="header-container container">
                 <nav class="nav">
                     <a class="logo-web link" href="./index.html">Web<span class="logo-studio-nav link">Studio</span></a>
@@ -47,9 +47,14 @@
                         </li>
                     </ul>
                 </address>
+                <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                    <svg class="menu-toggle-icon" width="32" height="32">
+                        <use href="./images/icons.svg#burger"></use>
+                    </svg>
+                </button>
             </div>
 
-        </header> -->
+        </header> 
         <main>
 
             <!--hero section -->
@@ -448,6 +453,10 @@
             </div>
         </footer> 
 
+        <!-- Mobile menu -->
+
+        <div></div>
+
         <!--modal-window-->
 
         <div class="backdrop  is-hidden" data-modal>
@@ -544,6 +553,13 @@
             </div>
 
         </div>
+
+
+ <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+            integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+            crossorigin="anonymous">
+</script>
+ <script defer src="js/mobile-menu.js"></script>
 
  <script src="./js/modal.js"></script>
 
