--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         </li>
                     </ul>
                 </address>
+
                 <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
                     <svg class="menu-toggle-icon" width="32" height="32">
                         <use href="./images/icons.svg#burger"></use>
@@ -455,7 +456,36 @@
 
         <!-- Mobile menu -->
 
-        <div></div>
+        <div class="menu-container js-menu-container" id="mobile-menu">
+            <button class="menu-toggle js-close-menu">
+                <svg class="modal-icon" width="8" height="8">
+                    <use href="./images/icons.svg#close"></use>
+                </svg>
+            </button>
+        
+            <ul class="mobile-menu">
+                <li class="mobile-item">
+                    <a class="mobile-link active-mobile link" href="./index.html">
+                        Studio
+                    </a>
+                </li>
+                <li class="mobile-item">
+                    <a class="mobile-link link" href="./portfolio.html">
+                        Portfolio
+                    </a>
+                </li>
+                <li class="mobile-item">
+                    <a class="mobile-link link" href="">
+                        Contacts
+                    </a>
+                </li>
+                
+            </ul>
+        </div>
+
+
+
+
 
         <!--modal-window-->
 
