--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 
             <!-- feature section -->
-            <section class="section-feature section">
+            <section class="section-feature">
                 <div class="container">
                     <h2 class="section-feature-title visually-hidden">Lorem ipsum dolor sit.</h2>
                     <ul class="feature-list list">
@@ -166,7 +166,7 @@
             </section>  
 
             <!-- team section -->
-             <section class="section-team section">
+             <section class="section-team">
                 <div class="container">
                     <h2 class="section-team-title">Our Team</h2>
 
