--- a/index.html
+++ b/index.html
@@ -419,6 +419,7 @@
                 </div> 
                 
             </section>
+        </main>
 
         <!-- footer section -->
          <footer class="footer">
@@ -672,9 +673,7 @@
  <script defer src="js/mobile-menu.js"></script>
 
  <script src="./js/modal.js"></script>
-
-
-  
+ 
 </body>
 
 
